[tool.poetry]
name = "algokit-python-docs-tooling"
version = "0.1.0"
description = "Internal Sphinx tooling for Algokit shared config docs generation."
authors = ["Algorand Foundation"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.2.3"
furo = "^2024.1.29"
myst-parser = "^4.0.0"
sphinx-autodoc2 = "^0.5.0"
sphinx-autobuild = "^2024.4.16"
sphinx-copybutton = "^0.5.2"
sphinx-mermaid = "^0.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
