[project]
name = "sphinx-docs-action"
version = "0.0.0"
description = "Self-contained Sphinx environment for the reusable docs action."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
docs = [
  "sphinx==8.1.3",
  "myst-parser==4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
